kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: generatepins-backend
    labels:
        app: generatepins-backend
    namespace: example
spec:
    replicas: 1
    selector:
        matchLabels:
            app: generatepins-backend
    template:
        metadata:
            labels:
                app: generatepins-backend
        spec:
            containers:
                - name: generatepins-backend-service
                  image: generatepins_server:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 8000
                - name: generatepins-backend-db
                  image: generatepins_backend_db:latest
                  imagePullPolicy: Never
